# page-scraper

./: LICENSE  page-scraper.cabal
app/: Main.hs
src/: Lib.hs
