cabal-version:      2.4
name:               page-scraper
version:            0.1.0.0
synopsis:           A web scraper that handles pages


-- A longer description of the package.
-- description:
homepage:           https://github.com/meipp/page-scraper

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             meipp
maintainer:         meipp@users.noreply.github.com

-- A copyright notice.
-- copyright:
category:           Web

library
    exposed-modules:  Lib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base,
        extra,
        scalpel
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:
        -XFlexibleInstances

executable page-scraper
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base,
        page-scraper,
        scalpel
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:
        -XFlexibleInstances

test-suite page-scraper-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Test.hs
    build-depends:    base
